--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,12 @@ test {
     }
 }
 
+bootJar {
+    classifier = 'boot'
+}
+
 jar {
+    classifier = ''
     manifest {
         attributes(
                 'Main-Class': 'com.app.sawmills.SawmillsApplication'
