--- a/build.gradle
+++ b/build.gradle
@@ -75,12 +75,9 @@ test {
     }
 }
 
-bootJar {
-    classifier = 'boot'
-}
 
 jar {
-    classifier = ''
+    enabled = false
     manifest {
         attributes(
                 'Main-Class': 'com.app.sawmills.SawmillsApplication'
